# encoding-converters-core

./: .editorconfig  .gitignore  .hgignore  BuildFWSourcePackage.sh  DetermineBindingRedirectVersion.ps1  EncConverters 2008.sln  EncConverters 2010.sln  EncConverters 2015.sln  EncConverters 2017.sln  EncConverters 2019.sln  EncConverters-mono.sln  Encoding-Converters-Core.props  LatestRedirects.config  Makefile.in  Package.Debug.nuspec  Package.Release.nuspec  Package.nuspec  PurgeBins.bat  ReadMe.md  ReadMe.txt  ReadMe_linux.txt  ReadMe_windows.txt  SharedItems.props  autogen.sh  configure.ac  environ  latest redirects.txt  new redirects for 0.8.6.txt  regkeysfordevs.reg  values.xml  values.xml-ec  values.xml-fieldworks
.github/workflows/: build.yml
.nuget/: packages.config
DistFiles/MapsTables/: ToNfc.py
DistFiles/windows/: Readme to Get Gecko to work in EncCnvtrs.txt
ac-helpers/: ec_mono_devel.m4
debian/: changelog  control  dirs  postinst  postrm  rules  shlibs.local
debian-ec/: copyright  enc-converters.3  postrm
debian-fieldworks/: changelog  control  postinst  postrm  rules
debian/source/: options
include/unicode/: bytestriebuilder.h  calendar.h  coll.h  compactdecimalformat.h  currpinf.h  datefmt.h  dcfmtsym.h  decimfmt.h  dtfmtsym.h  dtitvfmt.h  (+46 more)
installer/: EC.wxs  EC_40.mm.wxs  EcActions.wxs  EcFeatures.wxs  EcFiles.wxs  EcFolderACLs.mm.wxs  EcMergeModules.wxs  EcUI.wxs  SEC_EC_40.mm.wxs
redist/: ReverseString.py  ToLowerCase.py  ToNfc.py  ToNfd.py  ToUnicodeNames.py  ToUpperCase.py  libcc.so.0.0.0
src/: EncCnvtrs 2010.csproj  buildai.bat
(+943 files in other folders)
