AC_INIT([encConverters], [4.0], [stephen_mcconnel@sil.org])

dnl Check for programs
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PYTHON_DEVEL
EC_MONO_DEVEL

AC_CONFIG_HEADERS([src/config.h])
AC_CONFIG_FILES([
 Makefile
 src/ECDriver/linux/Makefile
 src/IcuEC/Makefile
 src/PyScriptEC/Makefile
])
AC_OUTPUT
